--- a/Day1/False_Positives.Rmd
+++ b/Day1/False_Positives.Rmd
@@ -114,8 +114,8 @@ Before giving you the chance to play with some random science, let's look oh wha
 
 ```{r}
 dummy_data %>% 
-  filter(nsamples %in% c(10,100,300, 500)) %>% 
-  dplyr::select(nsamples, uptri) %>%                  ## this is needed because a function called `select` is abiguous
+  filter(nsamples %in% c(10,100,300,500)) %>% 
+  dplyr::select(nsamples, uptri) %>%       ## this is needed because a function called `select` is abiguous
   unnest(uptri) %>% 
   ggplot() + 
   geom_histogram(aes(x = uptri, fill = factor(nsamples)), alpha = 0.5, col = "white", binwidth = 0.05) + 
@@ -174,6 +174,14 @@ ex2 <- ex2 %>%
   mutate(ps = map2(A,B,function(x,y) myt(x,y)))
 
 ex2
+```
+
+
+Last bit is the plot ...
+
+```{r}
+hist(ex2$ps[[5]])
+abline(v = 0.05, col = "red", lty = 2)
 ```
 
 
